--- a/NCFU-style.css
+++ b/NCFU-style.css
@@ -1,23 +1,24 @@
-header nav, footer {
-    background-color: #292929;
-}
-header .login{
-    color: #e5e5e5;
-}
-
-header{
+header nav, footer, header {
     background-color: #292929;
 }
 
-header .auth {
-    color: #e5e5e5;
+header .login, header .auth, a,
+.panel-group>.panel-default>.panel-heading, .alert,
+.cbp-ig-grid .cbp-ig-category, #page, .notification-wrapper,
+.nav-pills>li>a, .nav-pills>li>span, .btn-default, .academic-years .term,
+div.article-body p span {
+    color: #e5e5e5 !important;
 }
 
-nav .mainmenu .submenu, nav .mainmenu .selected>span, nav .mainmenu .selected>a>span, nav .mainmenu>li:hover span, nav .mainmenu>li.hover span {
+a:hover {
+    color: #c69560;
+}
+
+nav .mainmenu .submenu, nav .mainmenu .selected>span, nav .mainmenu .selected>a>span, nav .mainmenu>li:hover span, nav .mainmenu>li.hover span, .row, #page {
     background-color: #444;
 }
 
-.col-xs-12.mainmenu-wrapper {
+.col-xs-12.mainmenu-wrapper, .notification-wrapper {
     background-color: #333;
 }
 
@@ -30,45 +31,28 @@ body, html {
     color: #e5e5e5;
 }
 
-.panel-group>.panel-default>.panel-heading {
-    color: #e5e5e5;
-}
-
-.alert {
-    color: #e5e5e5;
-}
-
-h1, h2, h3, h4{
+h1, h2, h3, h4, h5, .h5 {
     color: #d07d25;   
-}
-
-#page {
-    color: #dedec0;
 }
 
 .text-muted {
     color: #d5d5d5;
 }
 
-.panel-group>.panel-default>.panel-heading:hover {
+.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
+    background-color: #555;
+}
+
+.panel-group>.panel-default>.panel-heading:hover, div.col-xs-12, .intervals-selector .item,
+.nav-pills>li>a, .nav-pills>li>span, .btn-default, .academic-years .term  {
     background-color: #666;
 }
 
-.nav-pills>li>a, .nav-pills>li>span {
-    background-color: #666;
-    color: #e5e5e5;
+div.item.course:hover {
+    background-color: #777;
 }
 
-.nav-pills>li>span:hover {
-    background-color: #888;
-}
-
-.btn-default {
-    background-color: #666;
-    color: #e5e5e5;
-}
-
-.btn-default:hover {
+.nav-pills>li>span:hover, .btn-default:hover, .academic-years .term:hover  {
     background-color: #888;
 }
 
@@ -76,31 +60,9 @@ li.col-lg-3.col-md-3.col-sm-3.col-xs-3 {
     background-color: #3d3d3d;
 }
 
-.academic-years .term {
-    background-color: #666;
-    color: #e5e5e5;
-}
-
-.academic-years .term:hover {
-        background-color: #888;
-}
-
-#page {
-    background-color: #444;
-    color: #e5e5e5;
-}
-
-div.item.course:hover {
-    background-color: #777;
-}
-
 div.item.course {
     background-color: #5f5f5f;
     color: #eee;
-}
-
-.row {
-    background-color: #444;
 }
 
 div.item.course.selected {
@@ -108,50 +70,21 @@ div.item.course.selected {
     color: #eee;
 }
 
-.academic-years .term.selected {
-background-color: #4a4e68;
-}
-
-div.col-xs-12 {
-        background-color: #666;
-}
-
 span.logo {
     background: url(https://freepngclipart.com/download/sunglasses/47219-simon-kamina-sunglasses-eyewear-glasses-png-free-photo.png) no-repeat center 3px;
     background-size: 80%;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus, .nav-pills>li.active>span, .nav-pills>li.active>span:hover, .nav-pills>li.active>span:focus {
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus, .nav-pills>li.active>span, .nav-pills>li.active>span:hover, 
+.nav-pills>li.active>span:focus, .academic-years .term.selected, .btn-primary  {
     background-color: #4a4e68;
-}
-
-
-
-.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
-    background-color: #555;
 }
 
 .table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
     background-color: #626262;
 }
 
-a {
-    color: #e5e5e5;
-}
-
-a:hover {
-    color: #c69560;
-}
-
-.btn-primary {
-    background-color: #4a4e68;
-}
-
-div#keyboard.row {
-     background-color: #0000;
-}
-
-div#gatekeeper.row {
+div#keyboard.row, div#gatekeeper.row  {
      background-color: #0000;
 }
 
@@ -160,25 +93,20 @@ div#gatekeeper.row {
     color: #e89339;
 }
 
-
 #institutes .specialities .accordion-toggle {
     color: #ded3c7;
-}
-
-.intervals-selector .item{
-    background-color: #666;
 }
 
 .intervals-selector:hover .item:hover {
     background-color: #737070;
 }
 
-
-table.table-hover>tbody>tr:hover>th {
+table.table-hover>tbody>tr:hover>th, div.row.record:hover {
     background-color: #6e695f;
 }
 
-.table>thead>tr>td.info, .table>tbody>tr>td.info, .table>tfoot>tr>td.info, .table>thead>tr>th.info, .table>tbody>tr>th.info, .table>tfoot>tr>th.info, .table>thead>tr.info>td, .table>tbody>tr.info>td, .table>tfoot>tr.info>td, .table>thead>tr.info>th, .table>tbody>tr.info>th, .table>tfoot>tr.info>th {
+.table>thead>tr>td.info, .table>tbody>tr>td.info, .table>tfoot>tr>td.info, .table>thead>tr>th.info, .table>tbody>tr>th.info, .table>tfoot>tr>th.info, 
+.table>thead>tr.info>td, .table>tbody>tr.info>td, .table>tfoot>tr.info>td, .table>thead>tr.info>th, .table>tbody>tr.info>th, .table>tfoot>tr.info>th {
     background-color: #69645d;
 }
 
@@ -190,37 +118,13 @@ table.table-hover>tbody>tr:hover>th {
     background: linear-gradient(135deg, #555, #444 80%, #cccccc00);
 }
 
-h5, .h5 {
-    color: #d07d25;
-}
-
-div.row.record:hover {
-    background-color: #6e695f;
-}
-
-.notification-wrapper {
-    background-color: #333;
-    color: #e5e5e5;
-}
-
-.notification-wrapper .message-wrapper {
+.notification-wrapper .message-wrapper, .article.article-preview.is-actual,
+.subscription-panel .subscription-kind, .message-wrapper {
     background-color: #3e3e3e;
-}
-
-.subscription-panel .subscription-kind {
-    background-color: #3e3e3e;
-}
-
-.cbp-ig-grid .cbp-ig-category {
-    color: #e5e5e5;
 }
 
 .article.article-preview.primary {
     border-left-color:#e89339;
-}
-
-.article.article-preview.is-actual {
-    background-color: #3e3e3e;
 }
 
 .messageTo {
@@ -228,38 +132,22 @@ div.row.record:hover {
     color: #e9e9e9;
 }
 
-.message-wrapper {
-    background-color: #3e3e3e;
-}
-
-.chat-slider-wrap.chaton .chat-wrapper .chat{
+.input-wrapper,
+.chat-slider-wrap.chaton .chat-wrapper .chat,
+.chat-slider-wrap .chat-wrapper .chat .chat-files-wrap,
+.chat-slider-wrap.chaton .chat-wrapper .chat .files .file
+{
     background-color: #4d4d4d;
 }
 
-.input-wrapper{
-    background-color: #4d4d4d;
-}
-
-.chat-slider-wrap .chat-wrapper .chat label {
-    background-color: #4d4d4d;
-    color: #dadada;
-}
-
+.chat-slider-wrap .chat-wrapper .chat label,
 .chat-slider-wrap .chat-wrapper .chat .refresh, .chat-slider-wrap .chat-wrapper .chat .closed-button {
     background-color: #4d4d4d;
     color: #dadada;
 }
 
-.chat-slider-wrap.chaton .chat-wrapper .chat .files .file{
-    background-color: #4d4d4d;
-}
-
 .chat-slider-wrap .chat-wrapper .chat .hide:checked+label+.files {
     background-color: #5b5b5b;
-}
-
-.chat-slider-wrap .chat-wrapper .chat .chat-files-wrap {
-    background-color: #4d4d4d;
 }
 
 .chat-slider-wrap .chat-wrapper .chat .unchat {
